@@ -21,6 +21,7 @@
  - EC2 API update: support for NatGateways, VpcClassicLinkDnsSupport, and ScheduledInstances
  - RDS API update: support for enhanced monitoring, and more new features
  - CloudFront API update: support for compressing and SSL to origin
+ - CloudFront API update: support for ACM certificates
  - CloudTrail API update: support for multiregion trails
  - Config API update
  - EMR API update: support for VPC EMR
